Added tests for the IdpRepos