@@ -4,9 +4,8 @@ package io.company.brewcraft.security.idp;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,86 +15,64 @@ import com.amazonaws.services.cognitoidp.AWSCognitoIdentityProvider;
 import com.amazonaws.services.cognitoidp.model.AdminCreateUserRequest;
 import com.amazonaws.services.cognitoidp.model.AdminCreateUserResult;
 import com.amazonaws.services.cognitoidp.model.AdminDeleteUserRequest;
-import com.amazonaws.services.cognitoidp.model.AdminDeleteUserResult;
 import com.amazonaws.services.cognitoidp.model.AdminUpdateUserAttributesRequest;
-import com.amazonaws.services.cognitoidp.model.AdminUpdateUserAttributesResult;
 import com.amazonaws.services.cognitoidp.model.AttributeType;
 import com.amazonaws.services.cognitoidp.model.UserType;
 
 public class AwsCognitoIdpClientTest {
 
-    private AwsCognitoIdpClient awsCognitoIdpClient;
-    private AWSCognitoIdentityProvider awsCognitoIdp;
+    private AWSCognitoIdentityProvider mAwsIdp;
+
+    private AwsCognitoIdpClient client;
 
     @BeforeEach
     public void init() {
-        final String userPoolId = "testUserPoolId";
-        awsCognitoIdp = mock(AWSCognitoIdentityProvider.class);
-        awsCognitoIdpClient = new AwsCognitoIdpClient(awsCognitoIdp, userPoolId);
+        mAwsIdp = mock(AWSCognitoIdentityProvider.class);
+        client = new AwsCognitoIdpClient(mAwsIdp, "USER_POOL");
     }
 
     @Test
-    public void testCreateUser_CreatesCognitoUser_WhenUserNameAndAttributesProvided() {
-        final String userName = "testUserName";
-        final UserAttributeType userAttributeForEmail = getUserAttributeTypeForEmail();
-        ArgumentCaptor<AdminCreateUserRequest> cognitoCreateUserRequestCaptor = ArgumentCaptor.forClass(AdminCreateUserRequest.class);
-        final AdminCreateUserResult adminCreateUserResult = getAdminCreateUserResult();
-        when(awsCognitoIdp.adminCreateUser(cognitoCreateUserRequestCaptor.capture())).thenReturn(adminCreateUserResult);
+    public void testCreateUser_CallsAwsIdpWithCreateRequest() {
+        ArgumentCaptor<AdminCreateUserRequest> captor = ArgumentCaptor.forClass(AdminCreateUserRequest.class);
 
-        awsCognitoIdpClient.createUser(userName, Collections.singletonList(userAttributeForEmail));
-
-        final AdminCreateUserRequest adminCreateUserRequest = cognitoCreateUserRequestCaptor.getValue();
-        assertEquals(userName, adminCreateUserRequest.getUsername());
-        final Optional<AttributeType> congnitoUserAttributeForEmail = getAttributeByName(userAttributeForEmail.getName(), adminCreateUserRequest.getUserAttributes());
-        assertTrue(congnitoUserAttributeForEmail.isPresent());
-        assertEquals(userAttributeForEmail.getValue(), congnitoUserAttributeForEmail.get().getValue());
+        AdminCreateUserResult mRes = new AdminCreateUserResult().withUser(new UserType().withUserStatus("SUCCESS"));
+        doReturn(mRes).when(mAwsIdp).adminCreateUser(captor.capture());
+        
+        client.createUser("USERNAME", Map.of("key-1", "value-1", "key-2", "value-2"));
+        
+        List<AttributeType> expected = List.of(
+            new AttributeType().withName("key-1").withValue("value-1"),
+            new AttributeType().withName("key-2").withValue("value-2")
+        );
+        assertEquals(expected, captor.getValue().getUserAttributes());
+        assertEquals("USERNAME", captor.getValue().getUsername());
+        assertEquals("USER_POOL", captor.getValue().getUserPoolId());
     }
 
     @Test
-    public void testUpdateUser_UpdatesCognitoUserAttributes_WhenUserNameAndAttributesProvided() {
-        final String userName = "testUserName";
-        final UserAttributeType userAttributeForEmail = getUserAttributeTypeForEmail();
-        ArgumentCaptor<AdminUpdateUserAttributesRequest> cognitoUpdateUserAttributesRequestCaptor = ArgumentCaptor.forClass(AdminUpdateUserAttributesRequest.class);
-        final AdminUpdateUserAttributesResult adminUpdateUserAttributesResult = mock(AdminUpdateUserAttributesResult.class);
-        when(awsCognitoIdp.adminUpdateUserAttributes(cognitoUpdateUserAttributesRequestCaptor.capture())).thenReturn(adminUpdateUserAttributesResult);
+    public void testUpdateUser_CallsAwsIdpWithUpdateRequest() {
+        ArgumentCaptor<AdminUpdateUserAttributesRequest> captor = ArgumentCaptor.forClass(AdminUpdateUserAttributesRequest.class);
+        doReturn(null).when(mAwsIdp).adminUpdateUserAttributes(captor.capture());
 
-        awsCognitoIdpClient.updateUser(userName, Collections.singletonList(userAttributeForEmail));
+        client.updateUser("USERNAME", Map.of("key-1", "value-1", "key-2", "value-2"));
 
-        final AdminUpdateUserAttributesRequest adminUpdateUserAttributesRequest = cognitoUpdateUserAttributesRequestCaptor.getValue();
-        assertEquals(userName, adminUpdateUserAttributesRequest.getUsername());
-        final Optional<AttributeType> congnitoUserAttributeForEmail = getAttributeByName(userAttributeForEmail.getName(), adminUpdateUserAttributesRequest.getUserAttributes());
-        assertTrue(congnitoUserAttributeForEmail.isPresent());
-        assertEquals(userAttributeForEmail.getValue(), congnitoUserAttributeForEmail.get().getValue());
+        List<AttributeType> expected = List.of(
+            new AttributeType().withName("key-1").withValue("value-1"),
+            new AttributeType().withName("key-2").withValue("value-2")
+        );
+        assertEquals(expected, captor.getValue().getUserAttributes());
+        assertEquals("USERNAME", captor.getValue().getUsername());
+        assertEquals("USER_POOL", captor.getValue().getUserPoolId());
     }
 
     @Test
-    public void testDeleteUser_DeletesCognitoUser_WhenUserNameIsProvided() {
-        final String userName = "testUserName";
-        ArgumentCaptor<AdminDeleteUserRequest> cognitoDeleteUserRequestCaptor = ArgumentCaptor.forClass(AdminDeleteUserRequest.class);
-        final AdminDeleteUserResult adminDeleteUserResult = mock(AdminDeleteUserResult.class);
-        when(awsCognitoIdp.adminDeleteUser(cognitoDeleteUserRequestCaptor.capture())).thenReturn(adminDeleteUserResult);
+    public void testDeleteUser_CallsAwsIdpWithDeleteRequest() {
+        ArgumentCaptor<AdminDeleteUserRequest> captor = ArgumentCaptor.forClass(AdminDeleteUserRequest.class);
+        doReturn(null).when(mAwsIdp).adminDeleteUser(captor.capture());
 
-        awsCognitoIdpClient.deleteUser(userName);
+        client.deleteUser("USERNAME");
 
-        final AdminDeleteUserRequest adminDeleteUserRequest = cognitoDeleteUserRequestCaptor.getValue();
-        assertEquals(userName, adminDeleteUserRequest.getUsername());
-    }
-
-    private AdminCreateUserResult getAdminCreateUserResult() {
-        final AdminCreateUserResult adminCreateUserResult = mock(AdminCreateUserResult.class);
-        final UserType userType = mock(UserType.class);
-        when(userType.getUserStatus()).thenReturn("enabled");
-        when(adminCreateUserResult.getUser()).thenReturn(userType);
-        return adminCreateUserResult;
-    }
-
-    private Optional<AttributeType> getAttributeByName(final String attributeName, final List<AttributeType> attributes) {
-        return attributes.stream().filter(attribute -> attributeName.equals(attribute.getName())).findAny();
-    }
-
-    private UserAttributeType getUserAttributeTypeForEmail() {
-        final String attributeNameForEmail = "testEmailAttributeName";
-        final String attributeValueForEmail = "testEmailAttributeValue";
-        return new UserAttributeType(attributeNameForEmail, attributeValueForEmail);
+        assertEquals("USERNAME", captor.getValue().getUsername());
+        assertEquals("USER_POOL", captor.getValue().getUserPoolId());
     }
 }
